# regex-performance

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  genspreadsheet.py
src/: CMakeLists.txt  boost.cpp  cppstd.cpp  ctre.cpp  hyperscan.c  main.c  main.h  onig.c  pcre2.c  re2.cpp  rust.c  tre.c  version.h.in  yara.c
src/rust/: .gitignore  CMakeLists.txt  Cargo.toml
src/rust/.cargo/: config.in
src/rust/include/: rregex.h
src/rust/src/: lib.rs
src/yara/ruleset/: aax.yar  huck.yar  inf.yar  ing+.yar  ing.yar  inn.yar  mix.yar  shing.yar  tom.yar  tom10.yar  tom2.yar  tom4.yar  tom_i.yar  twain.yar  twain_i.yar  word.yar
